--- a/python3/Lesson 1.2 Python Basics.ipynb
+++ b/python3/Lesson 1.2 Python Basics.ipynb
@@ -10,7 +10,12 @@
     "\n",
     "May 2020\n",
     "\n",
-    "Ref: Data Science from Scratch - Joel Grus"
+    "Ref: Data Science from Scratch - Joel Grus\n",
+    "\n",
+    "- line chart\n",
+    "- bar chart\n",
+    "- histogram\n",
+    "- scatter plot\n"
    ]
   },
   {
