--- a/Lesson 1.1 Python Introduction.ipynb
+++ b/Lesson 1.1 Python Introduction.ipynb
@@ -128,14 +128,13 @@
    "source": [
     "# Program Flow\n",
     "\n",
-    "# Iterating over a list of ints\n",
-    "#  you'll learn more about lists in the DataStructures module\n",
+    "# Iterating over a list of Ints\n",
     "for i in [1, 2, 3, 4, 5]:\n",
     "    print('i = ', i)\n",
     "    \n",
     "# Iterating over a list of strings\n",
-    "a = ['hello', 'brave', 'new', 'world']\n",
-    "for item in a:\n",
+    "mystring = ['hello', 'brave', 'new', 'world']\n",
+    "for item in mystring:\n",
     "    print(item)"
    ]
   },
