--- a/Lesson 1.2 Visualization.ipynb
+++ b/Lesson 1.2 Visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examples Visualizing Data\n",
+    "# Visualizing Data\n",
     "\n",
     "Subu Sangameswar\n",
     "\n",
