--- a/Lesson 1.5 Lists.ipynb
+++ b/Lesson 1.5 Lists.ipynb
@@ -17,7 +17,8 @@
     "- print list\n",
     "- split into list\n",
     "- slice a list\n",
-    "- reverse a list\n"
+    "- reverse a list\n",
+    "- list comprehension\n"
    ]
   },
   {
