updated minor changes

--- a/notebooks_draft/Untitled.ipynb
+++ b/notebooks_draft/Untitled.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Value of the European Call Option 8.038\n"
-     ]
+     "name": "stdout",
+     "text": "Value of the European Call Option 8.096\n"
     }
    ],
    "source": [
@@ -55,6 +55,46 @@
     "C0 = np.exp(-r * T) * np.sum(hT) / I # Monte Carlo estimator\n",
     "# Result Output\n",
     "print (\"Value of the European Call Option %5.3f\" % C0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def call_european(S0, K, T, r=.05, sigma=0.2, I=100000):\n",
+    "    # Valuation Algorithm\n",
+    "    z = np.random.standard_normal(I) # pseudorandom numbers \n",
+    "    ST=S0*np.exp((r-0.5*sigma**2)*T+sigma*np.sqrt(T)*z)\n",
+    "    # index values at maturity\n",
+    "    hT = np.maximum(ST - K, 0) # inner values at maturity\n",
+    "    C0 = np.exp(-r * T) * np.sum(hT) / I # Monte Carlo estimator\n",
+    "    return C0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this is a comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "the value of european call option 8.061\n"
+    }
+   ],
+   "source": [
+    "print(\"the value of european call option %5.3f\" % call_european(S0, K, T))"
    ]
   },
   {
@@ -81,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
