--- a/Lesson 1.4 Visualization.ipynb
+++ b/Lesson 1.4 Visualization.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Visualizing Data\n",
     "\n",
-    "Subu Sangameswar\n",
+    "Subu Raj\n",
     "\n",
     "May 2020\n",
     "\n",
